--- a/pagina_web/css/style.css
+++ b/pagina_web/css/style.css
@@ -24,11 +24,22 @@ nav {
     -ms-flex: 1;
     padding: 20px;
     background-color: dodgerblue;
+    
 }
 nav ul {
     list-style: none;
     padding: 0px;
 }
+
+nav ul li button {
+    padding: 5px;
+    width: 100px;
+    font-size: 75%;
+    border: 0px solid silver;
+    background-color: dodgerblue;
+    color: #fff;
+}
+
 article {
     -webkit-flex: 3;
     -ms-flex: 3;
@@ -53,8 +64,20 @@ article {
     width: 300px;
     height: 200px;
 }
+.forms {
+    -webkit-flex: 3;
+    -ms-flex: 3;
+    margin: 10px;
+    padding: 10px;
+}
 .form-st {
     display: block;
+}
+label {
+    margin-top: 5px;
+}
+input {
+    margin-top: 5px; 
 }
 footer {
     background-color: dodgerblue;
@@ -73,5 +96,11 @@ table, th, td {
     }
     li {
         display: inline-block;
+    }
+    nav ul {
+        width: 550px;
+    }
+    nav {
+        overflow-x: scroll;
     }
 }
