--- a/pagina_web/css/style.css
+++ b/pagina_web/css/style.css
@@ -22,9 +22,7 @@ section {
 nav {
     -webkit-flexL: 1;
     -ms-flex: 1;
-    padding: 20px;
     background-color: dodgerblue;
-    
 }
 nav ul {
     list-style: none;
@@ -32,12 +30,16 @@ nav ul {
 }
 
 nav ul li button {
-    padding: 5px;
+    padding: 10px;
     width: 100px;
     font-size: 75%;
     border: 0px solid silver;
     background-color: dodgerblue;
     color: #fff;
+}
+nav ul li button:hover {
+    background-color: white;
+    color: dodgerblue;
 }
 
 article {
