--- a/pagina_web/css/style.css
+++ b/pagina_web/css/style.css
@@ -20,19 +20,20 @@ section {
     display: flex;
 }
 nav {
-    -webkit-flexL: 1;
+    -webkit-flex: 1;
     -ms-flex: 1;
     background-color: dodgerblue;
+    text-align: center;
 }
 nav ul {
     list-style: none;
-    padding: 0px;
 }
-
+nav ul li {
+    display: inline-block;
+}
 nav ul li button {
     padding: 10px;
     width: 100px;
-    font-size: 75%;
     border: 0px solid silver;
     background-color: dodgerblue;
     color: #fff;
