--- a/pagina_web/css/style.css
+++ b/pagina_web/css/style.css
@@ -13,7 +13,7 @@ header {
     padding: 30px;
 }
 header h1 {
-    font-size: 7vw;
+    font-size: 5vw;
 }
 section {
     display: -webkit-flex;
@@ -24,21 +24,24 @@ nav {
     -ms-flex: 1;
     background-color: dodgerblue;
     text-align: center;
+    overflow: auto;
+}
+a {
+    text-decoration: none;
 }
 nav ul {
     list-style: none;
 }
 nav ul li {
     display: inline-block;
-}
-nav ul li button {
     padding: 10px;
-    width: 100px;
-    border: 0px solid silver;
+    margin: 0px;
+    text-decoration: none;
     background-color: dodgerblue;
     color: #fff;
 }
-nav ul li button:hover {
+
+nav ul li:hover {
     background-color: white;
     color: dodgerblue;
 }
